[project]
name = "bonfireapi"
version = "0.1.0"
description = "Python API for Bonfire (https://github.com/timas130/bonfire)"
authors = [
    {name = "PolarStar",email = "107398572+PoIarStar@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
